# telegram-stc-bot

./: README.md  main.py  pyproject.toml  requirements.txt
app/: database.py  translations.py
bot/: __init__.py
config/: settings.py
handlers/: admin_handlers.py  user_handlers.py
keyboards/: inline.py
middlewares/: middleware.py
utils/: binance.py
